chore: fix bottom overlapping screen in mobile view

--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -33,11 +33,7 @@ body {
 }
 
 html,
-body {
-	height: 100vh !important;
-	overflow: hidden !important;
-}
-
+body,
 main {
 	height: 100% !important;
 	overflow: hidden !important;
